<resources>
    <string name="app_name">micro:Sensor</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Log In</string>
    <string name="headingLogin">Account login</string>
    <string name="btnRegister">Register</string>
    <string name="btnSubmitAttendance">Submit</string>
    <string name="registerInstruction">Don\'t have an account yet?</string>
    <string name="textPreferences">Preferences</string>
    <string name="textYourHall">Your hall</string>
    <string name="textYourSubject">Your subject</string>
    <string name="textLectureType">Lecture type</string>
    <string name="textCurrentHall">D10</string>
    <string name="textCurrentSubject">AIR</string>
    <string name="textPredavanje">Predavanja</string>
    <string name="textSeminari">Seminarska nastava</string>
    <string name="textLaboratorijskeVjezbe">Laboratorijske vjezbe</string>
    <string name="messageNoNearbyBeacons">No nearby Beacons detected. Make sure your Android device is close enough to the Beacon.</string>
    <string name="messageHintBluetooth">Note: Make sure your Bluetooth service is enabled.</string>
    <string name="messageNoLecture">There are no current lectures in this hall.</string>
    <string name="messageStudentNotInSubject">You are not attending this subject. Are you sure you are in the right hall?</string>
    <string name="messageAttendanceSubmitted">You have submitted attendance for this lecture.</string>
    <string name="textNumberOfAttendances"># of attendances: %1$d</string>
    <string name="textAverageTemperature">Average temperature: </string>
    <string name="textAverageBrightness">Average brightness: </string>
    <string name="textAverageHumidity">Average humidity: </string>
    <string name="headingSubmitAttendance">Submit attendance</string>
    <string name="headingMeasurements">Measurements</string>
    <string name="headingStatistics">Statistics</string>
    <string name="headingNoNearbyBeacons">Oops!</string>
    <string name="customControlList">List</string>
    <string name="customControlGraph">Graph</string>

    <string name="nav_header_title">microsensor</string>
    <string name="nav_header_info">foi@foi.hr</string>
    <string name="menu_logout">Logout</string>
    <string name="additional">Additional</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="placeholderHall">Hall 10</string>
    <string name="placeholderTemperature">0°</string>
    <string name="placeholderHumidity">0%</string>
    <string name="placeholderBrightness">0 cd</string>
    <string name="currentTemperature">%1$s°</string>
    <string name="currentHumidity">%1$s%%</string>
    <string name="currentBrightness">%1$s cd</string>
    <string name="textHumidity">Humidity</string>
    <string name="textBrightness">Brightness</string>

    <string name="attendance_submission_module_name">Submit attendance</string>
    <string name="attendance_monitor_module_name">Previous attendance</string>
    <string name="attendance_module_name">Attendance</string>
    <string name="statisticsview_module_name">Statistics view</string>
    <string name="realtimeview_module_name">Realtime view</string>
    <string name="logout_module_name">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customControlQR">QR</string>
    <string name="customControlCode">Code</string>
    <string name="customControlPin">PIN</string>

    <!-- Strings related to QRCodeModuleFragment-->
    <string name="scan_barcode_button">Scan QR code</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
</resources>
