<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NearbyBeaconNotFound">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headingNoNearbyBeacons"
            android:textColor="@color/icons"
            android:fontFamily="@font/open_sans_bold"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"/>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/bluetooth_beacon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageNoNearbyBeacons"
            android:textColor="@color/icons"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageHintBluetooth"
            android:textColor="@color/secondary_text_lighter"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</FrameLayout>