<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".fragments.FormAttendanceSubmission">

    <FrameLayout
        android:id="@+id/attendance_module_container"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_hall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:padding="8dp"
        android:elevation="6dp"
        android:background="@drawable/layout_border"
        app:layout_constraintTop_toBottomOf="@+id/attendance_module_container"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_lighter"
            android:text="@string/textYourHall"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textCurrentHall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/textCurrentHall"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:elevation="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_border"
        app:layout_constraintTop_toBottomOf="@+id/layout_hall"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_lighter"
            android:text="@string/textYourSubject"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textCurrentSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/textCurrentSubject"
            android:textAllCaps="true"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:elevation="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_border"
        app:layout_constraintTop_toBottomOf="@+id/layout_subject"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text_lighter"
            android:text="@string/textLectureType"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textSubjectType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/mSubmitAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="55dp"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/ic_done"
        android:drawableTint="@color/icons"
        android:fontFamily="@font/open_sans_bold"
        android:paddingStart="25dp"
        android:paddingEnd="35dp"
        android:text="@string/btnSubmitAttendance"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_type" />

    <FrameLayout
        android:id="@+id/attendance_submission_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/mRadioSegmentedControl"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/green_out_line"
        android:checkedButton="@+id/mQRModule"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSubmitAttendance">

        <RadioButton
            android:id="@+id/mQRModule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/customControlQR"
            android:textColor="@color/icons" />

        <RadioButton
            android:id="@+id/mCodeModule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/customControlCode"
            android:textColor="@color/icons" />

        <RadioButton
            android:id="@+id/mPinModule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/customControlPin"
            android:textColor="@color/icons" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>

