<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_discount_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/RealtimeFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.RealtimeViewFragment">

    <TextView
        android:id="@+id/mCurrentHall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/currentHall" />

    <TextView
        android:id="@+id/mCurrentTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/currentTemperature" />

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/temperature_icon"
            android:layout_gravity="center_horizontal"
            android:tint="@color/icons"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/humidity_icon"
                android:layout_gravity="center_horizontal"
                android:tint="@color/icons"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textHumidity"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/mCurrentHumidity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="@string/currentHumidity"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:paddingBottom="35dp"/>

        <LinearLayout
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/brightness_icon"
                android:layout_gravity="center_horizontal"
                android:tint="@color/icons"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBrightness"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/mCurrentBrightness"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="@string/currentBrightness"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:paddingBottom="35dp"/>

    </LinearLayout>

</LinearLayout>