<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/layout_border">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date_24dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="3dp">

        <TextView
            android:id="@+id/mMeasurementDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:fontFamily="@font/open_sans_bold"
            android:padding="1dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAverageTemperature"
                android:textColor="@color/secondary_text_lighter"/>

            <TextView
                android:id="@+id/mAvgTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:padding="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAverageBrightness"
                android:textColor="@color/secondary_text_lighter"/>

            <TextView
                android:id="@+id/mAvgBrightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:padding="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAverageHumidity"
                android:textColor="@color/secondary_text_lighter"/>

            <TextView
                android:id="@+id/mAvgHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:padding="1dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>